get all users and post user routes finished
